--- a/package.json
+++ b/package.json
@@ -9,13 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
     "@ethersproject/abi": "^5.8.0",
     "@ethersproject/bignumber": "^5.8.0",
-    "@material-ui/core": "4",
+    "@mui/icons-material": "^7.0.0",
+    "@mui/material": "^5.15.0",
+    "@mui/styles": "^5.15.0",
     "axios": "^1.8.4",
     "next": "15.2.3",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
